Tesla project before fix

--- a/index.html
+++ b/index.html
@@ -5,12 +5,215 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/assets/img/Tesla_favicon.png">
     <title>Model 3 | Tesla</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+    <div class="page-container">
+        <!-- Side nav -->
+        <nav class="side-nav">
+            <a><span></span><span>Model 3</span></a>
+            <a><span></span><span>Safty</span></a>
+            <a><span></span><span>Performance</span></a>
+        </nav>
 
+        <!-- Model 3 -->
+        <section class="section-1">
+            <div class="logo">
+                <svg class="tds-icon tds-icon-logo-wordmark tds-site-logo-icon" viewBox="0 0 342 35"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z"
+                        fill="#ffffff"></path>
+                </svg>
+                </svg>
+            </div>
+            <div class="top-nav">
+                <nav class="tesla-products-menu">
+                    <a href="https://www.tesla.com/models">Model S</a>
+                    <a href="https://www.tesla.com/model3">Model 3</a>
+                    <a href="https://www.tesla.com/modelx">Model X</a>
+                    <a href="https://www.tesla.com/modely">Model Y</a>
+                    <a href="https://www.tesla.com/solarroof">Solar Roof</a>
+                    <a href="https://www.tesla.com/solarpanels">Solar Panels</a>
+                </nav>
+                <nav class="shop-acoount-menu">
+                    <a href="https://shop.tesla.com/">Shop</a>
+                    <a href="https://shop.tesla.com/">Ahop</a>
+                    <input type="button" value="Menu" />
+                </nav>
+            </div>
+
+            <header>
+                <h1>Model 3</h1>
+            </header>
+
+
+
+            <div class="car-benefits-container">
+                <ul>
+                    <li>
+                        <div>
+                            <p>
+                                <span class="speedometer"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 21"
+                                        fill="#ffffff">
+                                        <path
+                                            d="M 35.471 16.155 C 35.473 12.234 34.016 8.454 31.384 5.547 L 30.819 4.918 C 24.619 -1.314 14.524 -1.356 8.273 4.826 C 5.239 7.825 3.539 11.917 3.558 16.183 L 3.558 17.122 L 6.674 17.122 L 6.674 16.183 L 5.45 16.183 C 5.452 12.736 6.729 9.412 9.038 6.852 L 9.981 7.706 L 10.601 7.002 L 9.659 6.166 C 12.182 3.695 15.546 2.267 19.077 2.168 L 19.077 3.96 L 20.019 3.96 L 20.019 2.13 C 23.553 2.239 26.916 3.677 29.434 6.157 L 28.493 6.955 L 29.115 7.659 L 30.056 6.842 C 32.347 9.398 33.614 12.706 33.616 16.136 L 32.354 16.136 L 32.354 17.074 L 35.471 17.074 Z"
+                                            style="" />
+                                        <path
+                                            d="M 31.014 17.004 L 7.991 17.004 C 7.991 10.859 13.146 5.875 19.503 5.875 C 25.86 5.875 31.014 10.859 31.014 17.004 Z"
+                                            style="fill-opacity: 0.5;" />
+                                        <path style="stroke-width: 0.438269;"
+                                            d="M 26.821 21.411 C 26.821 21.424 26.822 21.434 26.822 21.445 C 26.819 21.706 26.747 21.96 26.615 22.181 C 26.535 22.329 26.431 22.46 26.309 22.571 C 26.075 22.781 25.785 22.894 25.463 22.913 C 25.41 22.917 25.357 22.919 25.305 22.918 C 25.273 22.918 25.241 22.914 25.21 22.912 C 25.084 22.903 24.961 22.878 24.842 22.836 C 24.715 22.798 24.593 22.741 24.481 22.668 C 24.208 22.489 24.004 22.214 23.909 21.893 C 23.856 21.734 23.83 21.567 23.832 21.399 C 23.832 21.391 23.833 21.384 23.833 21.377 C 23.833 21.356 23.83 21.336 23.831 21.315 C 23.831 21.302 23.832 21.289 23.833 21.277 L 24.879 10.525 C 24.904 10.278 25.11 10.09 25.36 10.091 C 25.606 10.092 25.815 10.283 25.837 10.53 L 26.822 21.323 C 26.824 21.342 26.824 21.359 26.823 21.377 C 26.823 21.389 26.822 21.4 26.821 21.411 Z"
+                                            transform="matrix(0, 1, -1, 0, 41.831852, -8.8226)" />
+                                    </svg></span>
+                                <span>3.1s</span>
+                            </p>
+                            <p>0-60 mph*</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p class="benefit-value">353mi</p>
+                            <p class="benefit-category">Range (EPA est.)</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
+                            <p class="benefit-value">AWD</p>
+                            <p class="benefit-category">Dual Motor</p>
+                        </div>
+                        <div>
+                            <input type="button" value="Order now">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <div>
+                <a>arrow</a>
+            </div>
+
+        </section>
+
+        <!--Safety -->
+        <!-- <section class="section-2">
+        <!-- to do stiky header with arrow from this point -->
+        <div class="safety-info-container">
+            <div class="safety-info">
+                <h3 class="light-header">Safety</h3>
+                <h2 class="bold-header">Built for Safety</h2>
+                <p class="regular-paragraph">Safety is the most important part of the overall Model 3 design. The metal
+                    structure is a combination
+                    of aluminum and steel, for maximum strength in every area. In a roof-crush test, Model 3 resisted
+                    four times its own mass, even with an all-glass roof: that's the same weight as two full-grown
+                    African elephants.</p>
+            </div>
+
+            <div class="safety-rating">
+                <h4>5-Star Overall NHTSA Rating</h4>
+            </div>
+            <div class="safety-buttons-container">
+                <ul class="safety-buttons">
+                    <li>
+                        <input class="btn circle" type="button" value="+" /><span>Learn more</span>
+                    </li>
+                    <li>
+                        <a href="https://www.tesla.com/model3/design" class="btn round">Order now</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="car-safty-image">
+            <ul class="car-safry-list">
+                <li><span class="safty-label">Impact Protection</span></li>
+                <li><span class="safty-label">Impact Protection</span></li>
+                <li><span class="safty-label">Impact Protection</span></li>
+            </ul>
+        </div>
+
+        </section>
+
+        <!-- Performance -->
+        <section class="section-3">
+            <div class="performens-benefits-top">
+                <div class="performens-benefits-container">
+                    <ul>
+                        <li>
+                            <div>
+                                <p>
+                                    <span class="speedometer"> <svg xmlns="http://www.w3.org/2000/svg"
+                                            viewBox="0 0 40 21" fill="#ffffff">
+                                            <path
+                                                d="M 35.471 16.155 C 35.473 12.234 34.016 8.454 31.384 5.547 L 30.819 4.918 C 24.619 -1.314 14.524 -1.356 8.273 4.826 C 5.239 7.825 3.539 11.917 3.558 16.183 L 3.558 17.122 L 6.674 17.122 L 6.674 16.183 L 5.45 16.183 C 5.452 12.736 6.729 9.412 9.038 6.852 L 9.981 7.706 L 10.601 7.002 L 9.659 6.166 C 12.182 3.695 15.546 2.267 19.077 2.168 L 19.077 3.96 L 20.019 3.96 L 20.019 2.13 C 23.553 2.239 26.916 3.677 29.434 6.157 L 28.493 6.955 L 29.115 7.659 L 30.056 6.842 C 32.347 9.398 33.614 12.706 33.616 16.136 L 32.354 16.136 L 32.354 17.074 L 35.471 17.074 Z"
+                                                style="" />
+                                            <path
+                                                d="M 31.014 17.004 L 7.991 17.004 C 7.991 10.859 13.146 5.875 19.503 5.875 C 25.86 5.875 31.014 10.859 31.014 17.004 Z"
+                                                style="fill-opacity: 0.5;" />
+                                            <path style="stroke-width: 0.438269;"
+                                                d="M 26.821 21.411 C 26.821 21.424 26.822 21.434 26.822 21.445 C 26.819 21.706 26.747 21.96 26.615 22.181 C 26.535 22.329 26.431 22.46 26.309 22.571 C 26.075 22.781 25.785 22.894 25.463 22.913 C 25.41 22.917 25.357 22.919 25.305 22.918 C 25.273 22.918 25.241 22.914 25.21 22.912 C 25.084 22.903 24.961 22.878 24.842 22.836 C 24.715 22.798 24.593 22.741 24.481 22.668 C 24.208 22.489 24.004 22.214 23.909 21.893 C 23.856 21.734 23.83 21.567 23.832 21.399 C 23.832 21.391 23.833 21.384 23.833 21.377 C 23.833 21.356 23.83 21.336 23.831 21.315 C 23.831 21.302 23.832 21.289 23.833 21.277 L 24.879 10.525 C 24.904 10.278 25.11 10.09 25.36 10.091 C 25.606 10.092 25.815 10.283 25.837 10.53 L 26.822 21.323 C 26.824 21.342 26.824 21.359 26.823 21.377 C 26.823 21.389 26.822 21.4 26.821 21.411 Z"
+                                                transform="matrix(0, 1, -1, 0, 41.831852, -8.8226)" />
+                                        </svg></span>
+                                    <span>3.1s</span>
+                                </p>
+                                <p>Quickest acceleration—from zero to 60 mph* in as little as 3.1 seconds</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <p class="benefit-value">162mph</p>
+                                <p class="benefit-category">Improved handling and aerodynamics allow for a top speed of
+                                    162
+                                    mph
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <p class="benefit-value">AWD</p>
+                                <p class="benefit-category">Dual Motor All-Wheel Drive instantly controls traction and
+                                    torque,
+                                    in all weather conditions</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="performance-info-bottom">
+                <div class="performance-info-container">
+                    <div class="performance-info-headrs">
+                        <h3>Performance</h3>
+                        <h4>Quickest Acceleration</h4>
+                        <ul class="safety-buttons">
+                            <li>
+                                <input class="btn circle" type="button" value="+" /><span>Learn more</span>
+                            </li>
+                            <li>
+                                <a href="https://www.tesla.com/model3/design" class="btn round">Order now</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="performance-info-description">
+                        <p class="regular-paragraph">
+                            Model 3 comes with the option of dual motor all-wheel drive,<br>
+                            20” Überturbine Wheels and Performance Brakes and lowered suspension for total<br>
+                            control, in all weather conditions. And a carbon fiber spoiler improves stability at<br>
+                            high speeds, all allowing Model 3 to accelerate from 0-60 mph* in as little as 3.1<br>
+                            seconds.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
+
+</html>
+
+
+
 
 </html>
