Tesla project fix page2

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
                 </nav>
             </div>
 
-            <header>
+            <header class="main-header">
                 <h1>Model 3</h1>
             </header>
 
 
 
             <div class="car-benefits-container">
-                <ul>
-                    <li>
+                <ul class="benefits-list">
+                    <li class="benefits-list-item">
                         <div>
                             <p>
                                 <span class="speedometer"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 21"
@@ -74,17 +74,19 @@
                             <p>0-60 mph*</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="benefits-list-item">
                         <div>
                             <p class="benefit-value">353mi</p>
                             <p class="benefit-category">Range (EPA est.)</p>
                         </div>
                     </li>
-                    <li>
+                    <li class="benefits-list-item">
                         <div>
                             <p class="benefit-value">AWD</p>
                             <p class="benefit-category">Dual Motor</p>
                         </div>
+                    </li>
+                    <li class="benefits-list-item">
                         <div>
                             <input type="button" value="Order now">
                         </div>
@@ -99,41 +101,43 @@
         </section>
 
         <!--Safety -->
-        <!-- <section class="section-2">
-        <!-- to do stiky header with arrow from this point -->
-        <div class="safety-info-container">
-            <div class="safety-info">
-                <h3 class="light-header">Safety</h3>
-                <h2 class="bold-header">Built for Safety</h2>
-                <p class="regular-paragraph">Safety is the most important part of the overall Model 3 design. The metal
-                    structure is a combination
-                    of aluminum and steel, for maximum strength in every area. In a roof-crush test, Model 3 resisted
-                    four times its own mass, even with an all-glass roof: that's the same weight as two full-grown
-                    African elephants.</p>
+        <section class="section-2">
+            <!-- to do stiky header with arrow from this point -->
+            <div class="safety-info-container">
+                <div class="safety-info">
+                    <h3 class="light-header">Safety</h3>
+                    <h2 class="bold-header">Built for Safety</h2>
+                    <p class="regular-paragraph">Safety is the most important part of the overall Model 3 design. The
+                        metal
+                        structure is a combination
+                        of aluminum and steel, for maximum strength in every area. In a roof-crush test, Model 3
+                        resisted
+                        four times its own mass, even with an all-glass roof: that's the same weight as two full-grown
+                        African elephants.</p>
+                </div>
+
+                <div class="safety-rating">
+                    <h4>5-Star Overall NHTSA Rating</h4>
+                </div>
+                <div class="safety-buttons-container">
+                    <ul class="safety-buttons">
+                        <li>
+                            <input class="btn circle" type="button" value="+" /><span>Learn more</span>
+                        </li>
+                        <li>
+                            <a href="https://www.tesla.com/model3/design" class="btn round">Order now</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
-            <div class="safety-rating">
-                <h4>5-Star Overall NHTSA Rating</h4>
-            </div>
-            <div class="safety-buttons-container">
-                <ul class="safety-buttons">
-                    <li>
-                        <input class="btn circle" type="button" value="+" /><span>Learn more</span>
-                    </li>
-                    <li>
-                        <a href="https://www.tesla.com/model3/design" class="btn round">Order now</a>
-                    </li>
+            <div class="car-safty-image">
+                <ul class="car-safry-list">
+                    <li><span class="safty-label">Impact Protection</span></li>
+                    <li><span class="safty-label">Impact Protection</span></li>
+                    <li><span class="safty-label">Impact Protection</span></li>
                 </ul>
             </div>
-        </div>
-
-        <div class="car-safty-image">
-            <ul class="car-safry-list">
-                <li><span class="safty-label">Impact Protection</span></li>
-                <li><span class="safty-label">Impact Protection</span></li>
-                <li><span class="safty-label">Impact Protection</span></li>
-            </ul>
-        </div>
 
         </section>
 
