Tesla project before style

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </nav>
                 <nav class="shop-acoount-menu">
                     <a href="https://shop.tesla.com/">Shop</a>
-                    <a href="https://shop.tesla.com/">Ahop</a>
+                    <a href="https://shop.tesla.com/">Account</a>
                     <input type="button" value="Menu" />
                 </nav>
             </div>
@@ -69,14 +69,14 @@
                                             d="M 26.821 21.411 C 26.821 21.424 26.822 21.434 26.822 21.445 C 26.819 21.706 26.747 21.96 26.615 22.181 C 26.535 22.329 26.431 22.46 26.309 22.571 C 26.075 22.781 25.785 22.894 25.463 22.913 C 25.41 22.917 25.357 22.919 25.305 22.918 C 25.273 22.918 25.241 22.914 25.21 22.912 C 25.084 22.903 24.961 22.878 24.842 22.836 C 24.715 22.798 24.593 22.741 24.481 22.668 C 24.208 22.489 24.004 22.214 23.909 21.893 C 23.856 21.734 23.83 21.567 23.832 21.399 C 23.832 21.391 23.833 21.384 23.833 21.377 C 23.833 21.356 23.83 21.336 23.831 21.315 C 23.831 21.302 23.832 21.289 23.833 21.277 L 24.879 10.525 C 24.904 10.278 25.11 10.09 25.36 10.091 C 25.606 10.092 25.815 10.283 25.837 10.53 L 26.822 21.323 C 26.824 21.342 26.824 21.359 26.823 21.377 C 26.823 21.389 26.822 21.4 26.821 21.411 Z"
                                             transform="matrix(0, 1, -1, 0, 41.831852, -8.8226)" />
                                     </svg></span>
-                                <span>3.1s</span>
+                                <span>3.1 s</span>
                             </p>
-                            <p>0-60 mph*</p>
+                            <p class="benefit-category">0-60 mph*</p>
                         </div>
                     </li>
                     <li class="benefits-list-item">
                         <div>
-                            <p class="benefit-value">353mi</p>
+                            <p class="benefit-value">353 mi</p>
                             <p class="benefit-category">Range (EPA est.)</p>
                         </div>
                     </li>
@@ -92,11 +92,12 @@
                         </div>
                     </li>
                 </ul>
+                <div>
+                    <a>arrow</a>
+                </div>
             </div>
 
-            <div>
-                <a>arrow</a>
-            </div>
+
 
         </section>
 
