--- a/index.html
+++ b/index.html
@@ -14,13 +14,29 @@
     <div class="page-container">
         <!-- Side nav -->
         <nav class="side-nav">
-            <a><span></span><span>Model 3</span></a>
-            <a><span></span><span>Safty</span></a>
-            <a><span></span><span>Performance</span></a>
+
+            <a href="#page1">
+                <div>
+                    <p class="line-wrapper"><span class="side-nav-line"></span></p><span class="side-nav-text">Model
+                        3</span>
+                </div>
+            </a>
+            <a href="#page2">
+                <div>
+                    <p class="line-wrapper"><span class="side-nav-line"></span></p><span
+                        class="side-nav-text">Safety</span>
+                </div>
+            </a>
+            <a href="#page3">
+                <div>
+                    <p class="line-wrapper"><span class="side-nav-line"></p></span><span
+                        class="side-nav-text">Performance</span>
+                </div>
+            </a>
         </nav>
 
         <!-- Model 3 -->
-        <section class="section-1">
+        <section id="page1" class="section-1">
             <div class="logo">
                 <svg class="tds-icon tds-icon-logo-wordmark tds-site-logo-icon" viewBox="0 0 342 35"
                     xmlns="http://www.w3.org/2000/svg">
@@ -56,7 +72,7 @@
                 <ul class="benefits-list">
                     <li class="benefits-list-item">
                         <div>
-                            <p>
+                            <h4 class="benefit-value">
                                 <span class="speedometer"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 21"
                                         fill="#ffffff">
                                         <path
@@ -68,41 +84,48 @@
                                         <path style="stroke-width: 0.438269;"
                                             d="M 26.821 21.411 C 26.821 21.424 26.822 21.434 26.822 21.445 C 26.819 21.706 26.747 21.96 26.615 22.181 C 26.535 22.329 26.431 22.46 26.309 22.571 C 26.075 22.781 25.785 22.894 25.463 22.913 C 25.41 22.917 25.357 22.919 25.305 22.918 C 25.273 22.918 25.241 22.914 25.21 22.912 C 25.084 22.903 24.961 22.878 24.842 22.836 C 24.715 22.798 24.593 22.741 24.481 22.668 C 24.208 22.489 24.004 22.214 23.909 21.893 C 23.856 21.734 23.83 21.567 23.832 21.399 C 23.832 21.391 23.833 21.384 23.833 21.377 C 23.833 21.356 23.83 21.336 23.831 21.315 C 23.831 21.302 23.832 21.289 23.833 21.277 L 24.879 10.525 C 24.904 10.278 25.11 10.09 25.36 10.091 C 25.606 10.092 25.815 10.283 25.837 10.53 L 26.822 21.323 C 26.824 21.342 26.824 21.359 26.823 21.377 C 26.823 21.389 26.822 21.4 26.821 21.411 Z"
                                             transform="matrix(0, 1, -1, 0, 41.831852, -8.8226)" />
-                                    </svg></span>
-                                <span>3.1 s</span>
-                            </p>
+                                    </svg></span>3. 1<span class="unit">s</span>
+                            </h4>
                             <p class="benefit-category">0-60 mph*</p>
                         </div>
                     </li>
                     <li class="benefits-list-item">
                         <div>
-                            <p class="benefit-value">353 mi</p>
+                            <h4 class="benefit-value">353<span class="unit">mi</span></h4>
                             <p class="benefit-category">Range (EPA est.)</p>
                         </div>
                     </li>
                     <li class="benefits-list-item">
                         <div>
-                            <p class="benefit-value">AWD</p>
+                            <h4 class="benefit-value">AWD</h4>
                             <p class="benefit-category">Dual Motor</p>
                         </div>
                     </li>
                     <li class="benefits-list-item">
                         <div>
-                            <input type="button" value="Order now">
+                            <a class="order-btn white" href="https://www.tesla.com/model3/design"
+                                class="btn round">Order now</a>
                         </div>
                     </li>
                 </ul>
-                <div>
-                    <a>arrow</a>
+                <div class="next-page">
+                    <a href="#page2">
+                        <svg class="tds-icon tds-icon-arrow--180" viewBox="0 0 100 100"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <use xlink:href="#tds-icon-arrow--180"></use>
+                        </svg>
+                        <img src="assets/img/down-arrow-svgrepo-com.svg" alt="My Happy SVG" />
+                    </a>
                 </div>
             </div>
+
 
 
 
         </section>
 
         <!--Safety -->
-        <section class="section-2">
+        <section id="page2" class="section-2">
             <!-- to do stiky header with arrow from this point -->
             <div class="safety-info-container">
                 <div class="safety-info">
@@ -118,15 +141,83 @@
                 </div>
 
                 <div class="safety-rating">
-                    <h4>5-Star Overall NHTSA Rating</h4>
+                    <h4>5-Star Overall NHTSA<br>Rating</h4>
+                    <ul class="safety-rating-list">
+                        <li class="safety-rating-item">
+                            <div class="safety-rating-category">
+                                <p>Driver</p>
+                                <span>Frontal</span>
+                            </div>
+                            <div class="safety-rating-stars">
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                            </div>
+                        </li>
+                        <li class="safety-rating-item">
+                            <div class="safety-rating-category">
+                                <p>Passenger</p>
+                                <span>Frontal</span>
+                            </div>
+                            <div class="safety-rating-stars">
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                            </div>
+                        </li>
+                        <li class="safety-rating-item">
+                            <div class="safety-rating-category">
+                                <p>Front Seat</p>
+                                <span>Side</span>
+                            </div>
+                            <div class="safety-rating-stars">
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                            </div>
+                        </li>
+                        <li class="safety-rating-item">
+                            <div class="safety-rating-category">
+                                <p>Rear Seat</p>
+                                <span>Side</span>
+                            </div>
+                            <div class="safety-rating-stars">
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                            </div>
+                        </li>
+                        <li class="safety-rating-item">
+                            <div class="safety-rating-category">
+                                <p>Rollover</p>
+                            </div>
+                            <div class="safety-rating-stars">
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                                <span>&#9733;</span>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
                 <div class="safety-buttons-container">
                     <ul class="safety-buttons">
                         <li>
-                            <input class="btn circle" type="button" value="+" /><span>Learn more</span>
+                            <button class="circle-btn"><span>+</span>Learn more</button>
                         </li>
                         <li>
-                            <a href="https://www.tesla.com/model3/design" class="btn round">Order now</a>
+                            <a class="order-btn" href="https://www.tesla.com/model3/design" class="btn round">Order
+                                now</a>
+
                         </li>
                     </ul>
                 </div>
@@ -135,21 +226,21 @@
             <div class="car-safty-image">
                 <ul class="car-safry-list">
                     <li><span class="safty-label">Impact Protection</span></li>
-                    <li><span class="safty-label">Impact Protection</span></li>
-                    <li><span class="safty-label">Impact Protection</span></li>
+                    <li><span class="safty-label">Rigid Structure</span></li>
+                    <li><span class="safty-label">Very Low Rollover Risk</span></li>
                 </ul>
             </div>
 
         </section>
 
         <!-- Performance -->
-        <section class="section-3">
+        <section id="page3" class="section-3">
             <div class="performens-benefits-top">
                 <div class="performens-benefits-container">
-                    <ul>
-                        <li>
+                    <ul class="performens-benefits-list">
+                        <li class="performens-benefits-item">
                             <div>
-                                <p>
+                                <h4 class="benefit-value">
                                     <span class="speedometer"> <svg xmlns="http://www.w3.org/2000/svg"
                                             viewBox="0 0 40 21" fill="#ffffff">
                                             <path
@@ -162,26 +253,30 @@
                                                 d="M 26.821 21.411 C 26.821 21.424 26.822 21.434 26.822 21.445 C 26.819 21.706 26.747 21.96 26.615 22.181 C 26.535 22.329 26.431 22.46 26.309 22.571 C 26.075 22.781 25.785 22.894 25.463 22.913 C 25.41 22.917 25.357 22.919 25.305 22.918 C 25.273 22.918 25.241 22.914 25.21 22.912 C 25.084 22.903 24.961 22.878 24.842 22.836 C 24.715 22.798 24.593 22.741 24.481 22.668 C 24.208 22.489 24.004 22.214 23.909 21.893 C 23.856 21.734 23.83 21.567 23.832 21.399 C 23.832 21.391 23.833 21.384 23.833 21.377 C 23.833 21.356 23.83 21.336 23.831 21.315 C 23.831 21.302 23.832 21.289 23.833 21.277 L 24.879 10.525 C 24.904 10.278 25.11 10.09 25.36 10.091 C 25.606 10.092 25.815 10.283 25.837 10.53 L 26.822 21.323 C 26.824 21.342 26.824 21.359 26.823 21.377 C 26.823 21.389 26.822 21.4 26.821 21.411 Z"
                                                 transform="matrix(0, 1, -1, 0, 41.831852, -8.8226)" />
                                         </svg></span>
-                                    <span>3.1s</span>
-                                </p>
-                                <p>Quickest acceleration—from zero to 60 mph* in as little as 3.1 seconds</p>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <p class="benefit-value">162mph</p>
-                                <p class="benefit-category">Improved handling and aerodynamics allow for a top speed of
-                                    162
-                                    mph
+                                    3.1<span class="unit">s</span>
+                                </h4>
+                                <p class="benefit-category">
+                                    Quickest acceleration—from zero to 60 mph*<br>
+                                    in as little as 3.1 seconds
                                 </p>
                             </div>
                         </li>
-                        <li>
+                        <li class="performens-benefits-item">
                             <div>
-                                <p class="benefit-value">AWD</p>
-                                <p class="benefit-category">Dual Motor All-Wheel Drive instantly controls traction and
-                                    torque,
-                                    in all weather conditions</p>
+                                <h4 class="benefit-value">162<span class="unit">mph</span></h4>
+                                <p class="benefit-category">
+                                    Improved handling and aerodynamics allow<br>
+                                    for a top speed of 162 mph
+                                </p>
+                            </div>
+                        </li>
+                        <li class="performens-benefits-item">
+                            <div>
+                                <h4 class="benefit-value">AWD</h4>
+                                <p class="benefit-category">
+                                    Dual Motor All-Wheel Drive instantly controls<br>
+                                    traction and torque, in all weather conditions
+                                </p>
                             </div>
                         </li>
                     </ul>
@@ -190,14 +285,15 @@
             <div class="performance-info-bottom">
                 <div class="performance-info-container">
                     <div class="performance-info-headrs">
-                        <h3>Performance</h3>
-                        <h4>Quickest Acceleration</h4>
+                        <h3 class="light-header">Performance</h3>
+                        <h2>Quickest Acceleration</h2>
                         <ul class="safety-buttons">
                             <li>
-                                <input class="btn circle" type="button" value="+" /><span>Learn more</span>
+                                <button class="circle-btn"><span>+</span>Learn more</button>
                             </li>
                             <li>
-                                <a href="https://www.tesla.com/model3/design" class="btn round">Order now</a>
+                                <a class="order-btn" href="https://www.tesla.com/model3/design" class="btn round">Order
+                                    now</a>
                             </li>
                         </ul>
                     </div>
