--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                         d="M0 .1a9.7 9.7 0 007 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 007-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 006-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 00-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 13.8h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zm0 14.1h26a9.6 9.6 0 007.1-7H78.3a9.6 9.6 0 007 7zM308.5 7h26a9.6 9.6 0 007-7h-40a9.6 9.6 0 007 7z"
                         fill="#ffffff"></path>
                 </svg>
-                </svg>
             </div>
             <div class="top-nav">
                 <nav class="tesla-products-menu">
@@ -126,7 +125,6 @@
 
         <!--Safety -->
         <section id="page2" class="section-2">
-            <!-- to do stiky header with arrow from this point -->
             <div class="safety-info-container">
                 <div class="safety-info">
                     <h3 class="light-header">Safety</h3>
@@ -225,9 +223,26 @@
 
             <div class="car-safty-image">
                 <ul class="car-safry-list">
-                    <li><span class="safty-label">Impact Protection</span></li>
-                    <li><span class="safty-label">Rigid Structure</span></li>
-                    <li><span class="safty-label">Very Low Rollover Risk</span></li>
+                    <li class="impact-indicator">
+                        <div class="car-safry-indicator">
+                            <div class="indicator"><span class="black-line"></span><span class="small-circle"></span>
+                            </div><span class="safty-label">Impact Protection</span>
+                        </div>
+                    </li>
+                    <li class="rigid-indicator">
+                        <div class="car-safry-indicator">
+                            <div class="indicator"><span class="black-line"></span><span class="small-circle"></span>
+                            </div><span class="safty-label">Rigid Structure</span>
+                        </div>
+                    </li>
+                    <li class="risk-indicator">
+                        <div class="car-safry-indicator">
+                            <div class="indicator"><span class="small-circle"></span><span
+                                    class="black-line"></span></span>
+                                <span class="safty-label">Very Low Rollover Risk</span>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
             </div>
 
